--- a/src/html/index.html
+++ b/src/html/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <section>
-    <header class="bg-yellow-400 py-4">
+    <header class="bg-yellow-400 py-4 sm:">
       <div class="row">
         <div class="flex justify-between mb-5">
           <aside>
@@ -34,11 +34,11 @@
               <i class="fa-solid fa-magnifying-glass"></i>
             </span>
           </aside>
-          <aside>
-            <div class="flex gap-2 justify-center align-middle">
+          <aside class="">
+            <div class="flex gap-2 justify-center sm:justify-start align-middle">
               <i class="fa-regular fa-envelope text-2xl"></i>
               <h1>
-                <span class="font-bold">Email:</span> <span>devinechild3003@gmail.com</span>
+                <a href="#"><span class="font-bold">Email:</span> <span>devinechild3003@gmail.com</span></a>
               </h1>
               <div>
                 <i class="fa-solid fa-cart-shopping"></i>cart
